syntax = "proto3";

package cache;
option go_package = "github.com/pilillo/igovium/service/cachepb";

message PutRequest {
	string key = 1;
	// rather than bytes, assume all as string and assume encoding binary stuff as base64 before the message is sent
	string value = 2; 
	string ttl1 = 3;
	string ttl2 = 4;
}

message Empty {

}


message DeleteRequest {
	string key = 1;
}


message GetRequest {
	string key = 1;
}

message GetResponse {
	// rather than bytes, assume all as string and assume encoding binary stuff as base64 before the message is sent
	// bytes value = 1;
	string value = 1;
}

service CacheService {
	rpc Put(PutRequest) returns (Empty) {};
    rpc Delete(DeleteRequest) returns (Empty) {};
    rpc Get(GetRequest) returns (GetResponse) {};
}